--- a/app/views/people/people.list.html
+++ b/app/views/people/people.list.html
@@ -1,25 +1,29 @@
-<td class="text-center" style="width: 58px; vertical-align: top; height: 80px;">
-    <a ui-sref="user.profile({user: global.user, test: 'test'})" title="View {{::item.value.profile.name | words:0}}'s Profile"><img style="height:58px" ng-src="{{item.value.profile.linkedin.pictureUrl || item.value.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="widget-image img-circle pull-left"/></a>
-</td>
-<td style="vertical-align: middle; height: 80px;">
-    <a ui-sref="user.profile({user: item})" title="View {{::item.value.profile.name | words:0}}'s Profile"><strong>{{::item.value.profile.name}} </strong></a>
-    <a ng-show="{{(item.value.profile.linkedin.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" style="color: #DDDDDD;">
-        <i class="fa fa-chevron-down fa-fw"></i>
-    </a>
-    <br>
-    <span class="text-muted" ng-bind-html="::item.value.profile.linkedin.headline | highlight:global.search.lastQuery"></span>
-    <div ng-show="(showSummary || global.search.count) && item.value.profile.linkedin.summary" style="padding-bottom: 10px;">
-        <hr>
-        <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.linkedin.summary | linky:'_blank' | highlight:global.search.lastQuery | safe_html"></span>
+<div class="col-md-10" style="vertical-align: top; min-height: 80px;">
+    <div>
+        <a ui-sref="user.profile({user: global.user, test: 'test'})" title="View {{::item.value.profile.name | words:0}}'s Profile"><img style="height:58px" ng-src="{{item.value.profile.linkedin.pictureUrl || item.value.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="widget-image img-circle pull-left"/></a>
     </div>
-</td>
-<td style="vertical-align: middle; height: 80px;">
-    <li ng-repeat="role in global.findKey(item.value.communities, 'roles', null, [])" style="list-style: none; display: inline; float: right; padding-left: 5px;">
-        <a href="{{'/' + role.key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : role.type == 'startup', 'btn-info' : role.type == 'network', 'btn-primary' : role.type == 'industry', 'btn-success' : role.type == 'location'}"><i class="fa {{role.profile.icon}}"></i> {{role.profile.name}}</a>
+    <div style="padding: 10px 0 0 70px;">
+        <a ui-sref="user.profile({user: item})" title="View {{::item.value.profile.name | words:0}}'s Profile"><strong>{{::item.value.profile.name}} </strong></a>
+        <a ng-show="{{(item.value.profile.linkedin.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" style="color: #DDDDDD;">
+            <i class="fa fa-chevron-down fa-fw"></i>
+        </a>
+        <br>
+        <span class="text-muted" ng-bind-html="::item.value.profile.linkedin.headline | highlight:global.search.lastQuery"></span>
+        <div ng-show="(showSummary || global.search.count) && item.value.profile.linkedin.summary">
+            <div style="padding-bottom: 10px;">
+                <hr>
+                <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.linkedin.summary | linky:'_blank' | highlight:global.search.lastQuery | safe_html"></span>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="col-md-2" style="vertical-align: middle; min-height: 80px;" ng-init="roles = global.findKey(item.value.communities, 'roles', ['leader', 'founder', 'advisor', 'investor'], {})">
+    <li ng-repeat="(key, role) in roles" style="list-style: none; display: inline; float: right; padding-left: 5px;">
+        {{role[0].toUpperCase()}}: <a href="{{'/' + key}}" class="btn btn-xs btn-outline" ng-class="{'btn-success' : global.community[key].type == 'location'}"><i class="fa {{global.community[key].profile.icon}}"></i> {{global.community[key].profile.name}}</a>
     </li>
     <div id="skills" ng-show="(showSummary || global.search.count) && item.value.profile.linkedin.summary" style="padding-top:40px">
         <li ng-repeat="skill in item.value.profile.linkedin.skills.values" class="label btn-default" style="margin-right: 3px; margin-top: 3px; float:right; padding-bottom: 5px;">
             <a><span ng-click="search(skill.skill.name)" ng-bind-html="::skill.skill.name | highlight:global.search.lastQuery"></span></a>
         </li>
     </div>
-</td>
+</div>
