--- a/app/views/people/people.dashboard.html
+++ b/app/views/people/people.dashboard.html
@@ -106,7 +106,14 @@
                     <td style="border-bottom: 1px solid #fff; border-top: none; padding: 0;" colspan="3"></td>
                 </div>
                 <div ng-show="global.search.tag" style="text-align: center" ng-cloak><h2><br/>Searching for {{global.search.tag}}..</h2></div>
-                <div class="row" ng-repeat="item in users.results" ng-include="'views/people/people.list.html'"></div>
+                <div ng-repeat="item in users.results" ng-switch on="$index % 2">
+                    <div class="col-md-6" ng-switch-when="0">
+                        <div class="row"  ng-include="'views/people/people.list.html'"></div>
+                    </div>
+                    <div class="col-md-6" ng-switch-when="1">
+                        <div class="row"  ng-include="'views/people/people.list.html'"></div>
+                    </div>
+                </div>
             </div>
             <div class="panel-footer" style="height:45px;">
                 <div class="pull-right">
