--- a/app/views/people/people.list.html
+++ b/app/views/people/people.list.html
@@ -2,14 +2,14 @@
     <div ng-init="roles = global.findKey(item.value.communities, 'roles', ['leader', 'founder', 'advisor', 'investor'], {})">
         <a ui-sref="user.profile({user: global.user, test: 'test'})" title="View {{::item.value.profile.name | words:0}}'s Profile"><img style="height:58px" ng-src="{{item.value.profile.linkedin.pictureUrl || item.value.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="widget-image img-circle pull-left"/></a>
     </div>
-    <div style="padding: 10px 0 0 70px; min-height: 64px;">
+    <div style="padding: 2px 0 0 70px; min-height: 64px; line-height: 2;">
         <a ui-sref="user.profile({user: item})" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
         <a ng-show="{{(item.value.profile.linkedin.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" style="color: #DDDDDD; float: left; ">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
         </a>
         <li ng-repeat="(key, role) in roles" style="list-style: none; display: inline; float: left; padding-left: 10px; margin-top: -3px;">
             <a href="{{'/' + key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : global.community[key].type == 'startup', 'btn-info' : global.community[key].type == 'network', 'btn-primary' : global.community[key].type == 'industry', 'btn-success' : global.community[key].type == 'location'}"><i class="fa {{global.community[key].profile.icon}}"></i> {{global.community[key].profile.name}}</a>
         </li>
-        <br><br>
+        <br>
         <span class="text-muted" ng-bind-html="::item.value.profile.linkedin.headline | highlight:global.search.lastQuery"></span>
         <div ng-show="(showSummary || global.search.count) && item.value.profile.linkedin.summary">
             <div style="padding-bottom: 10px;">
