--- a/app/views/startups/startups.dashboard.html
+++ b/app/views/startups/startups.dashboard.html
@@ -20,7 +20,7 @@
                         </li>
                         <li ng-class="{'active':global.context.selectedStage.indexOf('Bootstrap') >= 0}" ng-click="filterStage('Bootstrap')">
                             <a href="javascript:void(0)">
-                                (<$10k/yr) Bootstrap
+                                ($0 - $10k/yr) Bootstrap
                             </a>
                         </li>
                         <li ng-class="{'active':global.context.selectedStage.indexOf('Validation') >= 0}" ng-click="filterStage('Validation')">
