--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,12 @@
 /* Custom */
 
+.dash-row {
+  max-height: 36px;
+  overflow: hidden;
+  padding-bottom: 50px;
+  margin-bottom: -10px;
+}
+
 .h226 {
   height: 226px;
 }
