--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,10 +1,50 @@
 /* Custom */
 
+.skills {
+  margin-right: 3px;
+  margin-top: 3px;
+  float: left;
+  padding-bottom: 5px;
+}
+
+.skills-top {
+  padding-top:40px;
+}
+
+.user-row {
+  padding: 2px 0 0 70px;
+  min-height: 64px;
+  line-height: 2;
+}
+
+.user-img {
+  height:58px;
+  max-width: 58px;
+}
+
+.user-summary {
+  color: #DDDDDD;
+  float: left;
+}
+
+.role-right {
+  list-style: none;
+  display: inline;
+  float: right;
+  padding-left: 10px;
+  margin-top: -1px;
+}
+
 .dash-row {
   max-height: 36px;
   overflow: hidden;
   padding-bottom: 50px;
   margin-bottom: -10px;
+}
+
+.dash-table {
+  vertical-align: top;
+  min-height: 80px;
 }
 
 .h226 {
