--- a/app/views/people/people.list.html
+++ b/app/views/people/people.list.html
@@ -1,12 +1,12 @@
-<div class="col-md-12" style="vertical-align: top; min-height: 80px;">
+<div class="col-md-12 dash-table">
     <div ng-init="roles = global.findKey(item.value.communities, 'roles')">
-        <a ui-sref="user.profile({user: global.user})" title="View {{::item.value.profile.name | words:0}}'s Profile"><img style="height:58px; max-width: 58px;" ng-src="{{item.value.profile.linkedin.pictureUrl || item.value.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="widget-image img-circle pull-left"/></a>
+        <a ui-sref="user.profile({user: global.user})" title="View {{::item.value.profile.name | words:0}}'s Profile"><img ng-src="{{item.value.profile.linkedin.pictureUrl || item.value.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle pull-left"/></a>
     </div>
-    <div style="padding: 2px 0 0 70px; min-height: 64px; line-height: 2;">
+    <div class="user-row">
         <a ui-sref="user.profile({user: item})" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
-        <a ng-show="{{(item.value.profile.linkedin.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" style="color: #DDDDDD; float: left; ">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
+        <a ng-show="{{(item.value.profile.linkedin.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
         </a>
-        <li ng-repeat="role in roles" style="list-style: none; display: inline; float: left; padding-left: 10px; margin-top: -3px;">{{role}}
+        <li ng-repeat="role in roles" class="role-right">
             <a href="{{'/' + role.parent}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : role.type == 'startup', 'btn-info' : role.type == 'network', 'btn-primary' : role.type == 'industry', 'btn-success' : role.type == 'location'}"><i class="fa {{role.profile.icon}}"></i> {{role.profile.name}}</a>
         </li>
         <br>
@@ -17,8 +17,8 @@
             <div style="padding-bottom: 10px;">
                 <hr>
                 <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.linkedin.summary | linky:'_blank' | highlight:global.search.lastQuery | safe_html"></span>
-                <div id="skills" ng-show="(showSummary || global.search.count) && item.value.profile.linkedin.summary" style="padding-top:40px">
-                    <li ng-repeat="skill in item.value.profile.linkedin.skills.values" class="label btn-default" style="margin-right: 3px; margin-top: 3px; float: left; padding-bottom: 5px;">
+                <div id="skills" ng-show="(showSummary || global.search.count) && item.value.profile.linkedin.summary" class="skills-top">
+                    <li ng-repeat="skill in item.value.profile.linkedin.skills.values" class="label btn-default skills">
                         <a><span ng-click="search(skill.skill.name)" ng-bind-html="::skill.skill.name | highlight:global.search.lastQuery"></span></a>
                     </li>
                 </div>
