--- a/app/less/various.less
+++ b/app/less/various.less
@@ -27,6 +27,34 @@
   float: left;
 }
 
+
+input:-ms-input-placeholder {
+  font-size: 13px;
+  line-height: 1;
+}
+
+input::-webkit-input-placeholder {
+  font-size: 13px;
+  line-height: 1;
+}
+
+input:-moz-placeholder {
+  font-size: 13px;
+  line-height: 1;
+}
+
+.skill-input {
+  float: none; /* key */
+  width: auto; /* key */
+  height: 100%;
+  overflow: hidden; /* key */
+}
+
+.skill-input input {
+  width: 100%;
+  height: 100%;
+}
+
 .role-right {
   list-style: none;
   display: inline;
