--- a/app/views/people/people.dashboard.html
+++ b/app/views/people/people.dashboard.html
@@ -98,6 +98,14 @@
                         <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
                     </div>
                 </div>
+                <div class="pull-right" style="margin-right: 25px; min-width: 175px;">
+                    <ui-select multiple ng-model="skills.selected" theme="bootstrap" ng-disabled="disabled" limit="3">
+                        <ui-select-match placeholder="Choose up to 3 skills.." class="skill-input">{{$item}}</ui-select-match>
+                        <ui-select-choices repeat="skill in skills.list | filter:$select.search | limitTo: 5">
+                            {{skill}}
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
                 <span style="font-size: 17px;" ng-bind-html="title"></span>
             </div>
 
