--- a/app/views/startups/startups.dashboard.html
+++ b/app/views/startups/startups.dashboard.html
@@ -1,4 +1,4 @@
-<div ng-controller="PeopleController" animate-panel effect="zoomIn">
+<div ng-controller="StartupsController" animate-panel effect="zoomIn">
     <div class="row">
         <div class="col-md-4 animated-panel zoomIn">
         <!-- Navigation Block -->
@@ -97,7 +97,7 @@
         <div class="hpanel">
             <div class="panel-footer top">
                 <div class="pull-right">
-                    <strong>{{users.start}} - {{users.end}}</strong> of <strong>{{users.total_count}}&nbsp;&nbsp;</strong>
+                    <strong>{{startups.start}} - {{startups.end}}</strong> of <strong>{{users.total_count}}&nbsp;&nbsp;</strong>
                     <div class="btn-group btn-group-sm" style="margin-top: -2px;">
                         <span ng-if="users.prev"><a ng-click="getUsers(users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
                         <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
@@ -111,7 +111,7 @@
                     <td style="border-bottom: 1px solid #fff; border-top: none; padding: 0;" colspan="3"></td>
                 </div>
                 <div ng-show="global.search.tag" style="text-align: center" ng-cloak><h2><br/>Searching for {{global.search.tag}}..</h2></div>
-                <div ng-repeat="item in users.results" ng-switch on="$index % 2" style="padding-top: 10px;">
+                <div ng-repeat="item in startups" ng-switch on="$index % 2" style="padding-top: 10px;">
                     <div class="col-md-6" ng-switch-when="0">
                         <div class="row"  ng-include="'views/people/people.list.html'"></div>
                     </div>
